<resources>
    <string name="app_name">Habito</string>
    <string name="activity_create_label">Create</string>
    <string name="activity_edit_label">Edit</string>
    <string name="activity_detail_label">Detail</string>
    <string name="title_widget_detail">Habito Details</string>

    <string name="no_data_available">No data available.</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_sort_by_name">Sort by Name</string>
    <string name="action_sort_by_date">Sort by Date</string>
    <string name="delete_habit_message">Are you sure, you want to delete habit and all associated data?</string>

    <string name="preference_sort_file_key" translatable="false">com.ivanmagda.habito.SORT_PREFERENCE_FILE_KEY</string>
    <string name="saved_sort_order" translatable="false">sort_order</string>

    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="never">Never</string>

    <string name="bar_chart_set_name">This %1$s</string>

    <!--Auth-->
    <string name="auth_success_msg">You\'re now signed in. Hi there!</string>
    <string name="auth_canceled_msg">Sign in canceled</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="no_internet_connection">There is no Internet connection.</string>
    <string name="unknown_error">An unknown error has occurred.</string>

    <!--Edit habit-->
    <string name="tv_edit_name_label">Name</string>
    <string name="habit_name_hint">Which habit?</string>
    <string name="tv_edit_target_label">Target</string>
    <string name="habit_target_hint">Your target</string>
    <string name="tv_edit_reminder_label">Reminder</string>
    <string name="tv_edit_reset_label">Reset to zero</string>
    <string name="off">Off</string>
    <string name="select">Select</string>
    <string name="color_picker_default_title">Change color</string>
    <string name="spinner_prompt">Reset to zero every</string>
    <string name="toast_empty_name">Enter habit name</string>
    <string name="toast_failed_target_value">Try input another target value</string>
    <string name="toast_target_empty">Enter your target or zero</string>

    <string name="list_item_reset_today">Today</string>
    <string name="list_item_reset_freq">This %1$s</string>
    <string name="list_item_reset_never">Since %1$s</string>
    <string name="bt_increase_content_description">Increase score</string>
    <string name="bt_decrease_content_description">Decrease score</string>

</resources>
